# Dataset-Collector

./: .gitignore  README.md  pyproject.toml
src/dataset_collector/: collector.py  file_ops.py  loggings.py
src/datasetcollector/: collector.py
src/datasetcollector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
